# soundpaad

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md  com.soundpaad.app.desktop
src/: main.rs
src/audio/: mod.rs  player.rs  virtual_mic.rs
src/db/: models.rs  repository.rs
src/shop/: mod.rs  myinstants.rs
src/ui/: app.rs  binds.rs  mod.rs  settings.rs  shop.rs  soundpad.rs
