[package]
name = "soundpaad"
version = "0.1.1"
edition = "2024"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10", "v4_14"] }
adw = { package = "libadwaita", version = "0.7" }
gstreamer = "0.23"
gstreamer-play = "0.23"
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.22"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-channel = "0.3"
once_cell = "1"
urlencoding = "2"
